--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,10 @@
     "strict": true,                            
     "skipLibCheck": true,                      
     "forceConsistentCasingInFileNames": true,
+    "rootDir": ".",
+    "outDir": "./build",
     "types": ["node"]
   },
   "include": ["./**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "build"]
 }
